--- a/db/flyway.conf
+++ b/db/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:sqlserver://db:1433;databaseName=CollectionsDB
+flyway.url=jdbc:mssql://databases/CollectionsDB
 flyway.user=sa
 flyway.password=EasvEasv123!
 flyway.locations=filesystem:/flyway/sql
