--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
             - ACCEPT_EULA=Y
             - MSSQL_SA_PASSWORD=EasvEasv123!
             - MSSQL_PID=Express
+            - MSSQL_DATABASE=MyJenkinsDB
     API:
         image: ckbackend
         networks:
@@ -18,8 +19,10 @@ services:
             - '5001:80'
         depends_on:
             - databases
-    flyway:
+    flyway:    
         image: flyway/flyway:latest
+        networks: 
+            - wheel
         command: ["migrate"]
         volumes:
             - ./db:/flyway/sql
