--- a/db/flyway.conf
+++ b/db/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:jtds:sqlserver://databases:1433;databaseName=CollectionsDB
+flyway.url=jdbc:jtds:sqlserver://databases:1433;databaseName=CollectionsDB;encrypt=true;trustServerCertificate=true;
 flyway.user=sa
 flyway.password=EasvEasv123!
 flyway.locations=filesystem:/flyway/sql
