Removed port from conf

--- a/db/flyway.conf
+++ b/db/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:jtds:sqlserver://databases:1433/CollectionsDB
+flyway.url=jdbc:jtds:sqlserver://databases/CollectionsDB
 flyway.user=sa
 flyway.password=EasvEasv123!
 flyway.locations=filesystem:/flyway/sql
