Added retries to the fly file

--- a/db/flyway.conf
+++ b/db/flyway.conf
@@ -2,3 +2,4 @@ flyway.url=jdbc:jtds:sqlserver://databases/CollectionsDB
 flyway.user=sa
 flyway.password=EasvEasv123!
 flyway.locations=filesystem:/flyway/sql
+flyway.connectRetries=50
