Moved stuff back into docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
     databases:
-        image: database
+        image: mcr.microsoft.com/mssql/server:2019-latest
         networks:
             - wheel
         ports:
@@ -11,6 +11,11 @@ services:
             - MSSQL_SA_PASSWORD=EasvEasv123!
             - MSSQL_PID=Express
             - MSSQL_DATABASE=CollectionsDB
+        volumes:
+            - dbdata:/var/opt/mssql/data
+            - ./db/mssql/docker-entrypoint.sh:/entrypoint.sh
+            - ./db/mssql/docker-db-init.sh:/db-init.sh
+            - ./db/mssql/mssql-cars.sql:/db-init.sql
         
     API:
         image: ckbackend
