--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         volumes:
             - ./db2/docker-entrypoint.sh:/entrypoint.sh
             - ./db2/docker-db-init.sh:/db-init.sh
-            - ./db2/mssql-cars.sql:/db-init.sql
+            - ./db2/db-init.sql:/db-init.sql
         
     API:
         image: ckbackend
