--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,8 @@
 FROM mcr.microsoft.com/mssql/server:2019-latest
 
+# Copy initialization scripts
+COPY . /init
+
 # Set environment variables
 ENV SA_PASSWORD EasvEasv123! 
 ENV ACCEPT_EULA Y 
@@ -9,5 +12,5 @@ ENV MSSQL_TCP_PORT 1433
 # Expose the SQL Server port
 EXPOSE 1433
 
-# Copy database creation script to the init directory
-COPY create-database.sql /docker-entrypoint-initdb.d
+# Run Microsoft SQL Server and initialization script (at the same time)
+CMD /bin/bash ./entrypoint.sh
