Fixed a path with entrypoint path

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/mssql/server:2019-latest
 
 # Copy initialization scripts
-COPY . /init
+COPY /initScripts /  
 
 # Set environment variables
 ENV SA_PASSWORD EasvEasv123! 
@@ -13,4 +13,4 @@ ENV MSSQL_TCP_PORT 1433
 EXPOSE 1433
 
 # Run Microsoft SQL Server and initialization script (at the same time)
-CMD /bin/bash ./entrypoint.sh
+CMD /bin/bash ./initScripts/entrypoint.sh
