Modified jenkins file

--- a/XUnitTestProject/XUnitTestProject.csproj
+++ b/XUnitTestProject/XUnitTestProject.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\CollectionKeepersAPIV1\CollectionKeepersAPIV1.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="K6Reports\" />
+  </ItemGroup>
+
 </Project>
