--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,41 @@ services:
             - ./db:/flyway/conf
         depends_on:
             - databases
+    
+    kib01:
+        image: docker.elastic.co/kibana/kibana:7.9.0
+        container_name: kb01
+        ports:
+            - 5601:5601
+        environment:
+            ELASTICSEARCH_URL: http://es01:9200
+            ELASTICSEARCH_HOSTS: http://es01:9200
+        networks:
+            - elastic
+        depends_on:
+            - API
+
+    es01:
+        image: docker.elastic.co/elasticsearch/elasticsearch: 7.9.0
+        container_name: es01
+        environment:
+            - node.name=es01
+            - cluster.name=es-docker-cluster
+            - cluster.initial_master_nodes=es01
+            - bootstrap.memory_lock=true
+            - "ES_JAVA_OPTS=-Xms512m -Xm512m"
+        ulimits:
+            memlock:
+                soft: -1
+                hard: -1
+        volumes: 
+            - data01:/usr/share/elasticsearch/data
+        ports:
+            - 9200:9200
+        networks:
+            - elastic
+        depends_on:
+            - API
 networks:
     wheel: 
         driver: bridge
