--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
             ELASTICSEARCH_URL: http://es01:9200
             ELASTICSEARCH_HOSTS: http://es01:9200
         networks:
-            - elastic
+            - wheel
         depends_on:
             - API
 
@@ -63,7 +63,7 @@ services:
         ports:
             - 9200:9200
         networks:
-            - elastic
+            - wheel
         depends_on:
             - API
 networks:
