--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
             - "ES_JAVA_OPTS=-Xms512m -Xmx512m"  
             - discovery.type=single-node  
         volumes: 
-            - elasticsearch-data:/usr/share/elasticsearch/data
+            - ElasticSearchData:/usr/share/elasticsearch/data
         ports:
             - 9200:9200
         networks:
