Modified docker compose file

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ CollectionKeepersAPIV1/appsettings.json
 *.user
 *.userosscache
 *.sln.docstates
+*.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
