flyway change to VPS

--- a/db/flyway.conf
+++ b/db/flyway.conf
@@ -1,4 +1,5 @@
-flyway.url=jdbc:jtds:sqlserver://databases/CollectionsDB
+flyway.url=jdbc:jtds:sqlserver://51.75.69.121/CollectionsDB
 flyway.user=sa
-flyway.password=EasvEasv123!
+flyway.password=EasvEasv123
 flyway.connectRetries=50
+
