--- a/XUnitTestProject/XUnitTestProject.csproj
+++ b/XUnitTestProject/XUnitTestProject.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="9.0.1" />
+    <PackageReference Include="Serilog.Sinks.XUnit" Version="3.0.5" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -35,6 +36,7 @@
 
   <ItemGroup>
     <Folder Include="K6Reports\" />
+    <Folder Include="TestSerilogs\" />
   </ItemGroup>
 
 </Project>
